# Quantum_Control_Simulator

./: README.md  pyproject.toml
src/qcsim/: cli.py  constants.py  dynamics.py  fidelity.py  noise.py  optimize.py  pulses.py
src/qcsim/experiments/: drag_calibration.py  rabi.py  t1_t2.py
tests/: test_pulses.py  test_unitary_limits.py
