[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qcsim"
version = "0.1.0"
description = "Quantum Control Systems Simulator: pulses, decoherence (T1/T2), and pulse optimization"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "pytest>=8.0",
]

[project.scripts]
qcsim = "qcsim.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
